Grid and list view for image list (renamed from images) Meteor 1.2 materialize held at 0.97.0

--- a/style/main.sass
+++ b/style/main.sass
@@ -3,3 +3,15 @@
 
 .row.no-bottom-margin
   margin-bottom: 0
+
+.image-square-center
+  overflow: hidden
+  height: 0
+  padding-bottom: 100%
+  position: relative
+
+  img
+    min-width: 100%
+    min-height: 100%
+  //  position: absolute
+  //  top: -50% !important
